--- a/SAO-EP/CanvasManifest.json
+++ b/SAO-EP/CanvasManifest.json
@@ -28,6 +28,8 @@
       "delayloadscreens": true,
       "disablebehaviorreturntypecheck": false,
       "disablecdsfileandlargeimage": false,
+      "disabledeferloadingunusedscreenswithstartscreen": false,
+      "disableloadcomponentdefinitionsondemand": false,
       "disableruntimepolicies": false,
       "dynamicschema": false,
       "enableappembeddingux": false,
@@ -36,6 +38,7 @@
       "enablecomponentscopeoldbehavior": true,
       "enablecopilotanswercontrol": false,
       "enablecopilotcontrol": false,
+      "enablecreateaformula": false,
       "enabledataverseoffline": false,
       "enableeditcacherefreshfrequency": false,
       "enableeditinmcs": false,
@@ -83,6 +86,7 @@
       "reservedkeywords": false,
       "rtlinstudiopreview": false,
       "rtlsupport": false,
+      "sharepointselectsenabled": false,
       "showclassicthemes": false,
       "smartemaildatacard": false,
       "supportcolumnnamesasidentifiers": true,
