--- a/SAO-EP/Src/Reports_1.fx.yaml
+++ b/SAO-EP/Src/Reports_1.fx.yaml
@@ -688,7 +688,20 @@
                         Height: =46
                         Items: =ShowColumns(Organizations,orgAcronym)
                         OnChange: |+
-                            =// Update LocalAPF
+                            =ClearCollect(
+                                FilteredDataTable,
+                                If(
+                                    IsBlank(Dropdown2_1.SelectedText.'data-ADB4D7A662F548B49FAC2B986E348A1BorgName'),
+                                    LocalPD, // Show all data if the dropdown is empty
+                                    Filter(
+                                        LocalPD,
+                                        LR_ID.Id in Filter(LocalLR, EventOrg = Dropdown2_1.SelectedText.'data-ADB4D7A662F548B49FAC2B986E348A1BorgName').ID
+                                    )
+                                )    
+                            );
+                            
+                            
+                            // Update LocalAPF
                             /**
                             ClearCollect(
                                 LocalAPF,
